# duckpond

./: .dockerignore  .gitignore  BACKUP_DerivedFileManager.rs  BACKUP_backend.rs  CHECKED  Cargo.toml  Dockerfile  Makefile  OVERVIEW.md  PRD.md  README.md  RELEASING.md  REUSE.toml  SECURITY.md  TEST_ERR  TEST_ERR_OPLOG  TEST_OUT  TEST_OUT_OPLOG  analyze_query_patterns.sh  catparquet.sh  debug_delta_table.rs  debug_directory_test.rs  debug_empty_vector.rs  fs_architecture_analysis.md  hostmount.yaml  remote-config-local-init.yaml  remote-config-local-push.yaml  remote-config-local.yaml  remote-config.yaml  setup_oteljson.sh  showparquet.sh  test-hydrovu-dynamic-config.yaml  test-hydrovu-dynamic-dir.sh  test-incremental-growth.sh  test-ingest.yaml  test-template-config.yaml  test.sh  test_serde_arrow.rs  tinyfs_refactoring_plan.md  uuid-discovery.md
crates/adminlog/: Cargo.toml
crates/adminlog/src/: delta.rs  error.rs  lib.rs  store.rs
crates/adminlog/tests/: integration_test.rs  open.rs
crates/billing/: Cargo.toml  README.md
crates/billing/src/: chart.rs  dates.rs  factory.rs  lib.rs  lookup.rs  money.rs  schema.rs  store.rs
crates/billing/views/: view-trial-balance.yaml
crates/cmd/: Cargo.toml  build.rs
crates/cmd/old_tests/: integration_tests.rs
crates/cmd/scripts/: duckpond-emergency
crates/cmd/src/: common.rs  env_substitution.rs  error_utils.rs  lib.rs  main.rs  panic_alloc.rs  ship_utils.rs  synth-logs.rs  template_utils.rs  test_factory.rs
crates/cmd/tests/: control.rs  file_series_cli_tests.rs  file_table_core_tests.rs  file_table_csv_parquet_tests.rs  file_table_fixed_tests.rs  file_table_integration_summary.rs  file_table_simple_test.rs  integration_tests.rs  large_file_query_test.rs  replicate_simple.rs  test_executable_factory.rs  test_hostmount_cli.rs  test_init_restore.rs  test_remote_cli.rs  transaction_sequencing_test.rs
crates/gitpond/: Cargo.toml
crates/gitpond/src/: factory.rs  git.rs  lib.rs  sync.rs  tree.rs
crates/hydrovu/: Cargo.toml
crates/hydrovu/src/: client.rs  config.rs  factory.rs  lib.rs  main.rs  models.rs  schema.rs
crates/hydrovu/tests/: README.md  end_to_end_tests.rs  integration_tests.rs  mock_server.rs  transaction_concurrency_test.rs
crates/oplog/: Cargo.toml
crates/oplog/.github/: copilot-instructions.md
crates/oplog/memory-bank/: productContext.md  systemPatterns.md  techContext.md
crates/oplog/src/: content.rs  delta.rs  entry.rs  error.rs  lib.rs  tinylogfs.rs
crates/oplog/tests/: open.rs
crates/provider/: Cargo.toml
crates/provider/src/: compression.rs  context.rs  context_tests.rs  csv.rs  csv_timeseries_integration_test.rs  dynamic_dir.rs  error.rs  excelhtml.rs  export.rs  format.rs  format_cache.rs  format_registry.rs  lib.rs  null_padding.rs  oteljson.rs  provider_api.rs  registry.rs  rollup_cache.rs  scope_prefix.rs  sql_derived.rs  sql_derived_config.rs  sql_derived_types.rs  sql_transform.rs  table_creation.rs  table_provider_options.rs  temporal_filter.rs  temporal_reduce.rs  test_factory.rs  timeseries_join.rs  timeseries_pivot.rs  tinyfs_object_store.rs  tinyfs_path.rs  url_pattern_matcher.rs  version_selection.rs
crates/provider/tests/: dynamic_file_format_tests.rs  excel_html_integration_tests.rs  gitpond_integration_test.rs  memory_persistence_tests.rs
crates/remote/: Cargo.toml
crates/remote/src/: changes.rs  chunked_async_reader.rs  error.rs  factory.rs  lib.rs  reader.rs  s3_registration.rs  schema.rs  table.rs  writer.rs
crates/remote/tests/: change_detection_tests.rs
crates/sitegen/: Cargo.toml  build.rs
crates/sitegen/assets/: chart.js  duckdb-shared.js  explore.js  log-viewer.js  overlay.js  relative-time.js  style.css  vega-shared.js
crates/sitegen/src/: config.rs  factory.rs  layouts.rs  lib.rs  markdown.rs  partitions.rs  routes.rs  shortcodes.rs  status_summary.rs
crates/steward/: Cargo.toml
crates/steward/src/: content_diff.rs  content_objects.rs  content_pull.rs  content_push.rs  content_source.rs  content_tree.rs  content_verify.rs  control_table.rs  dispatch.rs  fsck.rs  graft.rs  guard.rs  host.rs  lib.rs  maintenance.rs  rebuild.rs  remote_adapter.rs  remote_config.rs  remote_pond.rs  ship.rs  write_lock.rs
crates/steward/tests/: commit_spine_test.rs  content_diff_test.rs  content_objects_test.rs  content_pull_test.rs  content_push_test.rs  content_tree_test.rs  debug_transaction_versions.rs  deltalake_basic_tests.rs  fsck_test.rs  materialize_test.rs  rebuild_control_test.rs  remote_adapter_test.rs  remote_preview.rs  ship_lifecycle_test.rs  test_post_commit_factory.rs  tlog_materialize_test.rs  write_lock_test.rs
crates/sync-remote/: Cargo.toml
crates/sync-remote/src/: chunking.rs  error.rs  lib.rs  remote.rs  s3_registration.rs  schema.rs  steward_trait.rs  verify.rs
crates/sync-remote/tests/: maintain.rs  pull.rs  push.rs  remote.rs  restart.rs  schema.rs  verify.rs
crates/sync-steward/: Cargo.toml
crates/sync-steward/src/: control_table.rs  error.rs  guard.rs  lib.rs  steward.rs
crates/sync-steward/tests/: apply_pulled.rs  compact.rs  steward.rs
crates/sync-store/: Cargo.toml
crates/sync-store/src/: content_remote.rs  error.rs  lib.rs  s3_registration.rs  schema.rs  store.rs
crates/sync-store/tests/: checksum_integration.rs  content_remote.rs  store.rs
crates/sync-tests/: Cargo.toml
crates/sync-tests/src/: lib.rs
crates/sync-tests/tests/: bounded.rs  cross_pond.rs  integration.rs  properties.proptest-regressions  properties.rs  s3_minio.rs
crates/tinyfs/: Cargo.toml  rust-toolchain.toml
crates/tinyfs/src/: async_helpers.rs  backend.rs  bao_validating_reader.rs  caching_persistence.rs  chained_reader.rs  context.rs  derived.rs  dir.rs  entry_type.rs  error.rs  file.rs  fs.rs  glob.rs  lib.rs  memory_persistence.rs  metadata.rs  node.rs  wd.rs  (+13 more)
crates/tinylogfs/: Cargo.toml
crates/tlogfs/: Cargo.toml
crates/utilities/: Cargo.toml
original/: Cargo.toml
sandbox/: .gitignore  Cargo.toml  DESIGN.md
sandbox/remote/: Cargo.toml
sandbox/steward/: Cargo.toml
sandbox/store/: Cargo.toml
sandbox/tests/: Cargo.toml
(+912 files in other folders)
