[workspace]
resolver = "2"
members = [
"crates/tinyfs",
"crates/tlogfs",
"crates/steward",
"crates/cmd",
"crates/hydrovu",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.82"
arrow = { version = "55", default-features = false, features = ["prettyprint", "ipc"] }
arrow-arith = "55"
arrow-array = "55"
arrow-cast = { version = "55", features = ["prettyprint"] }
arrow-csv = "55"
arrow-schema = "55"
arrow-select = "55"
async-stream = "0.3"
async-trait = "0.1.88"
backon = { version = "1.3.0", features = ["std-blocking-sleep"] }
bytes = "1.6.0"
chrono = { version = "0.4" }
clap = { version = "4.5.4", features = ["derive"] }
datafusion = "47"
datafusion-common = "47"
datafusion-common-runtime = "47"
datafusion-expr = "47"
deltalake = { version = "0.26", features = ["datafusion"] }
diagnostics = { path = "crates/diagnostics" }
duckdb = { version = "1.3", features = ["bundled"] }
log = "0.4.17"
env_logger = "0.11.3"
nix = "0.28"
futures = "0.3"
hex = "0.4.3"
humantime = "2.1"
hydrovu = { path = "crates/hydrovu" }
linkme = "0.3"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
object_store = { version = "0.12" }
paste = "1.0"
parquet = { version = "55", features = ["async", "arrow"] }
parse_duration = "2.1.1"
peak_alloc = "0.3.0"
pin-project = "1.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.4", features = ["blocking", "gzip", "cookies", "json"] }
rust-s3 = { version = "0.34.0", default-features = false, features = ["sync-native-tls"] }
sea-query = { version = "0", features = ["with-chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_arrow = { version = "0.13", features = ["arrow-55"] }
serde_json = "1.0.116"
serde_repr = "0.1.19"
serde_yaml = "0.9.34-deprecated"
sha2 = "0.10.8"
steward = { path = "crates/steward" }
tempfile = "3.8"
tera = "1"
thiserror = "2.0.12"
tinyfs = { path = "crates/tinyfs" }
tlogfs = { path = "crates/tlogfs" }
tokio = { version = "1.32", features = ["full"] }
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["io", "compat"] }
url = "2.4"
uuid7 = "1.0"
warp = "0.3"
zstd = "0.13.2"

