[workspace]
resolver = "2"
members = [
"crates/tinyfs",
"crates/tlogfs",
"crates/steward",
"crates/cmd",
"crates/hydrovu",
"crates/utilities",
"crates/provider",
"crates/remote",
"crates/sitegen",
]

[workspace.package]
version = "0.21.0"
edition = "2024"
authors = ["DuckPond Contributors"]
homepage = "https://github.com/duckpond"
repository = "https://github.com/duckpond"
readme = "README.md"
license = "LICENSE.txt"
categories = ["small data", "local first", "industrial", "telemetry", "water system"]
keywords = ["arrow", "datafusion", "observable framework", "opentelemetry"]
description = "data management for a small industrial system"

[workspace.dependencies]
steward = { path = "crates/steward" }
tinyfs = { path = "crates/tinyfs" }
tlogfs = { path = "crates/tlogfs" }
hydrovu = { path = "crates/hydrovu" }
provider = { path = "crates/provider" }
utilities = { path = "crates/utilities" }
remote = { path = "crates/remote" }
sitegen = { path = "crates/sitegen" }

anyhow = "1.0.82"
arrow = { version = "56", default-features = false, features = ["prettyprint", "ipc"] }
arrow-arith = "56"
arrow-array = "56"
arrow-buffer = "56"
arrow-cast = { version = "56", features = ["prettyprint"] }
arrow-csv = "56"
arrow-schema = "56"
arrow-select = "56"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-stream = "0.3"
async-trait = "0.1.88"
backon = { version = "1.3.0", features = ["std-blocking-sleep"] }
base64 = "0.22"
bytes = "1.6.0"
chrono = { version = "0.4" }
clap = { version = "4.5.4", features = ["derive"] }
bao-tree = { version = "0.16", features = ["validate"] }
blake3 = "1.8"
data_privacy = { version = "0.5.0", default-features = false, features = ["serde"] }
data_privacy_macros = { version = "0.3.0", default-features = false }
datafusion = "50"
datafusion-common = "50"
datafusion-common-runtime = "50"
datafusion-expr = "50"
datafusion-functions-json = "0.50"
deltalake = { version = "0.29", default-features = false, features = ["datafusion", "rustls"] }
duckdb = { version = "1.3", features = ["bundled"] }
env_logger = "0.11.3"
file-rotate = "0.8"
futures = "0.3"
hex = "0.4.3"
humantime = "2.1"
linkme = "0.3"
log = "0.4.17"
oauth2 = { version = "5.0", default-features = false, features = ["reqwest", "rustls-tls"] }
object_store = { version = "0.12", features = ["aws"] }
opentelemetry-proto = { version = "0.27.0", features = ["gen-tonic-messages", "metrics", "with-serde"] }
parquet = { version = "56", features = ["async", "arrow"] }
parse_duration = "2.1.1"
paste = "1.0"
peak_alloc = "0.3.0"
pin-project = "1.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "gzip", "cookies", "json", "rustls-tls"] }
sea-query = { version = "0", features = ["with-chrono"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_arrow = { version = "0.13", features = ["arrow-56"] }
serde_json = "1.0.116"
serde_qs = "0.15"
serde_repr = "0.1.19"
serde_yaml = "0.9.34-deprecated"
tempfile = "3.8"
tera = "1"
thiserror = "2.0.12"
tl = "0.7.8"
tokio = { version = "1.32", features = ["io-util", "rt"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
url = "2.5"
uuid7 = { version = "1.0", features = ["serde"] }

[workspace.lints.rust]
# General compatibility lints
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Strict safety & quality standards
unsafe_code = "deny"
unstable_features = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_results = "deny"
trivial_numeric_casts = "deny"
variant_size_differences = "deny"
unused_extern_crates = "deny"

# Additional helpful warnings
unused_lifetimes = "warn"
semicolon_in_expressions_from_macros = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_macro_rules = "warn"

[workspace.lints.clippy]
# Strong defaults: deny problematic patterns
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

# Specific Clippy lint customizations
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
must-use-candidate = "warn"
await_holding_lock = "warn"
manual_async_fn = "warn"
dbg_macro = "warn"
explicit_into_iter_loop = "warn"

# Explicitly allowed practical exceptions
multiple_crate_versions = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"

# TODO: fix this one
uninlined_format_args = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "allow"
