[package]
name = "original"
version = "0.1.0"
edition = "2024"

[dependencies]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-arith = { workspace = true }
arrow-array = { workspace = true }
arrow-select = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
deltalake = { workspace = true }
duckdb = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
oauth2 = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
parse_duration = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rust-s3 = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
tinyfs = { path = "crates/tinyfs" }
oplog = { path = "crates/oplog" }
bincode = "1.3"
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wax = { workspace = true }
zstd = { workspace = true }
