# SPDX-FileCopyrightText: 2026 Caspar Water Company
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "billing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[lib]
doctest = false

[dependencies]
# Workspace dependencies
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
linkme.workspace = true
log.workspace = true
parquet.workspace = true
paste.workspace = true
provider.workspace = true
regex.workspace = true
serde.workspace = true
serde_arrow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
steward.workspace = true
thiserror.workspace = true
tinyfs.workspace = true
tlogfs.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
