[package]
name = "cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[lib]
doctest = false

[[bin]]
name = "pond"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-common-runtime = { workspace = true }
datafusion-expr = { workspace = true }
deltalake = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
hydrovu = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
provider = { workspace = true }
paste = { workspace = true }
peak_alloc = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
steward = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
tinyfs = { workspace = true }
tlogfs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utilities = { workspace = true }
uuid7 = { workspace = true }

[dev-dependencies]
regex = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
