# SPDX-FileCopyrightText: 2025 Caspar Water Company
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[lib]
doctest = false

[[bin]]
name = "pond"
path = "src/main.rs"

# Debian package built by `cargo deb -p cmd` on the watertown repo
# (typically run on watershop natively for the arm64 fleet).  The deb
# ships the pond binary plus the sitegen vendor blobs (DuckDB-WASM,
# Observable Plot, D3) at /usr/share/watertown/vendor/, which is the
# FHS path searched by sitegen::factory::find_vendor_dir() at runtime.
#
# Run `make vendor` (in the repo root) before `cargo deb` so the
# vendor/dist/ tree exists -- cargo-deb will fail loudly if a listed
# asset is missing.
#
# We intentionally do NOT depend on podman; this deb is meant for
# native installs on small machines where containers are too heavy.
[package.metadata.deb]
name = "watertown"
maintainer = "Joshua MacDonald <jmacd@users.noreply.github.com>"
copyright = "2025 Caspar Water Company, Apache-2.0"
extended-description = """\
Watertown is a local-first data management tool for small industrial
systems built on Apache Arrow, DataFusion, and Delta Lake.  This
package installs the `pond` CLI plus the sitegen browser-side vendor
assets (DuckDB-WASM, Observable Plot, D3) needed for chart rendering.
"""
section = "utils"
priority = "optional"
depends = "libc6, ca-certificates"
# Watertown is the renamed successor of the old `duckpond` package and
# ships the same `/usr/bin/pond`.  Conflicts + Replaces is the Debian
# package-rename idiom: it lets `dpkg -i watertown_*.deb` automatically
# remove an installed `duckpond` and take over its files, instead of
# aborting with "trying to overwrite '/usr/bin/pond', which is also in
# package duckpond".
conflicts = "duckpond"
replaces = "duckpond"
assets = [
    ["target/release/pond",                              "usr/bin/",                       "755"],
    ["../sitegen/vendor/dist/duckdb-eh.wasm",            "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser.mjs",        "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser-eh.worker.js","usr/share/watertown/vendor/",    "644"],
    ["../sitegen/vendor/dist/plot-d3-bundle.mjs",        "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-eh.wasm.gz",         "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser.mjs.gz",     "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser-eh.worker.js.gz","usr/share/watertown/vendor/", "644"],
    ["../sitegen/vendor/dist/plot-d3-bundle.mjs.gz",     "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-eh.wasm.br",         "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser.mjs.br",     "usr/share/watertown/vendor/",     "644"],
    ["../sitegen/vendor/dist/duckdb-browser-eh.worker.js.br","usr/share/watertown/vendor/", "644"],
    ["../sitegen/vendor/dist/plot-d3-bundle.mjs.br",     "usr/share/watertown/vendor/",     "644"],
    ["../../README.md",                                  "usr/share/doc/watertown/README", "644"],
]

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-cast = { workspace = true }
arrow-csv = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
billing = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
datafusion = { workspace = true }
hex = { workspace = true }
datafusion-common = { workspace = true }
datafusion-common-runtime = { workspace = true }
datafusion-expr = { workspace = true }
deltalake = { workspace = true }
env_logger = { workspace = true }
file-rotate = { workspace = true }
futures = { workspace = true }
gitpond = { workspace = true }
hydrovu = { workspace = true }
linkme = { workspace = true }
log = { workspace = true }
object_store = { workspace = true }
parquet = { workspace = true }
provider = { workspace = true }
paste = { workspace = true }
peak_alloc = { workspace = true }
serde = { workspace = true }
serde_arrow = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sitegen = { workspace = true }
steward = { workspace = true }
sync-store = { workspace = true }
tempfile = { workspace = true }

tinyfs = { workspace = true }
tlogfs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
utilities = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
uuid7 = { workspace = true }

[dev-dependencies]
regex = { workspace = true }

[lints]
workspace = true
