[package]
name = "hydrovu"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-cast.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
oauth2.workspace = true
parquet.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
log.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid7.workspace = true
tinyfs.workspace = true
tlogfs.workspace = true
steward.workspace = true
url.workspace = true

[dev-dependencies]
warp.workspace = true
datafusion.workspace = true
