[package]
name = "oplog"
version = "0.1.0"
edition = "2021"

[dependencies]
deltalake = { version = "0.26", features = ["datafusion"] }
arrow = { version = "55", features = ["prettyprint"] }
parquet = "55"
chrono = { version = "0.4" }
tokio = { version = "1.32" }
url = "2.4"
futures = "0.3"
object_store = { version = "0.12" }
arrow-array = "55.1.0"
arrow-schema = "55.1.0"
tempfile = "3.8"
thiserror = "2.0.12"
datafusion = "47.0.0"
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
serde = "1.0.219"
async-trait = "0.1.88"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"

[lints.clippy]
# Strong defaults: deny problematic patterns
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }

# Specific Clippy lint customizations
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
must-use-candidate = "warn"
await_holding_lock = "warn"
manual_async_fn = "warn"
dbg_macro = "warn"
explicit_into_iter_loop = "warn"

# Explicitly allowed practical exceptions
multiple_crate_versions = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"
